--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
                         <h1>Presentasi Indah</h1>
                         <h2>Menggunakan reveal.js</h2>
                     </section>
+
+                    <section>
+                        <h2>Ini adalah Slide Kedua</h2>
+                        <p>Slide juga dapat dilengkapi dengan teks!</p>
+                    </section>
+
+                    <section>
+                        <h2>Teks Panjang</h2>
+                        <p>
+                            Membuat presentasi dengan reveal.js ternyata sangat mudah.
+                            Cukup menambahkan kode HTML sesuai dengan aturan yang telah 
+                            diberikan, maka segalanya akan dilakukan secara otomatis oleh
+                            reveal.js. 
+                        </p>
+                        <p>
+                            Tidak sesulit yang dibayangkan, eh?
+                        </p>
+                    </section>
                 </div>
             </div>
 
