--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
                     </section>
 
                     <section>
-                        <h2>Ini adalah Slide Kedua</h2>
-                        <p>Slide juga dapat dilengkapi dengan teks!</p>
+                        <section>
+                            <h2>Ini adalah Slide Kedua</h2>
+                            <p>Slide juga dapat dilengkapi dengan teks!</p>
+                        </section>
+                        <section>
+                            <h3>Anak dari Slide Kedua</h3>
+                            <p>Slide ini berada di bawah slide kedua.</p>
+                        </section>
                     </section>
 
                     <section>
